--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <style>
         body {
           margin: 0;
-          background-color: red;
+          background-color: green;
         }
       </style>
     </head>
