--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<html><head>
-      <title>Green Page</title>
-      <style>
-        body {
-          margin: 0;
-          background-color: green;
-        }
-      </style>
-    </head>
-    <body>
-</body></html>
+<html>
+  <head>
+    <title>Green Page</title>
+    <style>
+      body {
+        margin: 0;
+        background-color: green;
+        color: white;
+        font-family: monospace;
+        padding: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <pre>
+           __/___
+     _____/______|
+     \              \
+     ~~~~~~~~~~~~~~~~~~
+    </pre>
+  </body>
+</html>
+
